@startuml

skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

title Authenticate User - Domain Model (US210)

hide circles
hide methods

package "Authentication Subsystem" {

    class User {
        Email: id
        Password: password
        String: name
    }

    class UserRole {
        String: id
        String: description
    }

    class UserSession {
        User: user
    }

    class Email {
        String: value
    }

    class Password {
        String: hashedValue
    }

    User "1" --> "1..*" UserRole : has >
    UserSession "1" --> "1" User : refers >
    User --> "1" Email
    User --> "1" Password
}

@enduml
